--- a/app/src/main/res/layout/activity_fragment_state_swipe_view.xml
+++ b/app/src/main/res/layout/activity_fragment_state_swipe_view.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_swipe_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.cjeon.interactionandengagement.FragmentStateSwipeViewActivity">
+    tools:context="com.example.cjeon.interactionandengagement.Activity.FragmentStateSwipeViewActivity">
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
