--- a/app/src/main/res/layout/activity_fragment_swipe_view.xml
+++ b/app/src/main/res/layout/activity_fragment_swipe_view.xml
@@ -4,14 +4,21 @@
     android:id="@+id/activity_fragment_swipe_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.cjeon.interactionandengagement.FragmentSwipeViewActivity"
+    tools:context="com.example.cjeon.interactionandengagement.Activity.FragmentSwipeViewActivity"
     android:orientation="vertical">
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/viewPager">
+        android:layout_weight="1"
+        android:layout_height="0dp"
+        android:id="@+id/viewPager1">
+    </android.support.v4.view.ViewPager>
 
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dp"
+        android:id="@+id/viewPager2">
     </android.support.v4.view.ViewPager>
 
 </LinearLayout>
