--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,70 +8,93 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/activity_main"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <Button
+        <LinearLayout
+            android:id="@+id/activity_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Fragment Swipe View"
-            android:onClick="openFragmentSwipeView"/>
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:orientation="vertical">
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Fragment State Swipe View"
-            android:onClick="openFragmentStateSwipeView"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Fragment Swipe View"
+                android:onClick="openFragmentSwipeView"/>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Swipe View With Tabs"
-            android:onClick="openSwipeViewWithTabs"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Fragment State Swipe View"
+                android:onClick="openFragmentStateSwipeView"/>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Drawer Activity"
-            android:onClick="openDrawerActivity"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Swipe View With Tabs"
+                android:onClick="openSwipeViewWithTabs"/>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Up Button Activity"
-            android:onClick="openUpActivity"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Drawer Activity"
+                android:onClick="openDrawerActivity"/>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Custom Back Button"
-            android:onClick="openCustomBackButtonActivity"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Up Button Activity"
+                android:onClick="openUpActivity"/>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Fragment back navigation"
-            android:onClick="openFragmentBackNavigationActivity"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Custom Back Button"
+                android:onClick="openCustomBackButtonActivity"/>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Send Notification"
-            android:onClick="sendNotification"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Fragment back navigation"
+                android:onClick="openFragmentBackNavigationActivity"/>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Send Notification w/ Context"
-            android:onClick="sendNotificationWithRegularContext"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Send Notification"
+                android:onClick="sendNotification"/>
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Notification w/ Context"
+                android:onClick="sendNotificationWithRegularContext"/>
 
-    </LinearLayout>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Notification w/ Special Context"
+                android:onClick="sendNotificationWithSpecialContext"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Big view notification"
+                android:onClick="sendBigViewNotification"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Timed Notification"
+                android:onClick="getFixedDurationProgressNotification"/>
+
+        </LinearLayout>
+
+    </ScrollView>
+
 </android.support.v4.widget.DrawerLayout>
