search Activity 구현
근데 아직 잘 몰게써

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,6 +105,11 @@
                 android:text="Swipe refresh"
                 android:onClick="openSwipeRefreshActivity"/>
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Search Activity"
+                android:onClick="openSearchActivity"/>
 
         </LinearLayout>
 
